--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="scroll-smooth">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>AF | Web Portfolio</title>
   <link rel="stylesheet" href="dist/output.css">
+  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
 
 <body>
@@ -159,6 +160,23 @@
       </div>
 
       <div class="w-full px-4 flex flex-wrap justify-center xl:w-10/12 xl:mx-auto">
+        <div class="mb-12 p-4 md:w-1/2">
+          <div class="rounded-md shadow-md overflow-hidden">
+            <img src="dist/img/portfolio/5.jpeg" alt="form login UBP" width="w-full">
+          </div>
+          <h3 class="font-semibold text-xl text-dark mt-5 mb-3">Cloning Form Login SIPT UBP Karawang</h3>
+          <p class="font-medium text-base text-secondary">Berikut ini merupakan portfolio cloning form login Universitas
+            Buana Perjuangan Karawang
+            menggunakan HTML & Vanilla CSS.</p>
+        </div>
+        <div class="mb-12 p-4 md:w-1/2">
+          <div class="rounded-md shadow-md overflow-hidden">
+            <img src="dist/img/portfolio/4.jpeg" alt="Landing Page Food" width="w-full">
+          </div>
+          <h3 class="font-semibold text-xl text-dark mt-5 mb-3">Landing Page Food</h3>
+          <p class="font-medium text-base text-secondary">Berikut ini merupakan website portfolio bertema food
+            menggunakan TailwindCSS.</p>
+        </div>
         <div class="mb-12 p-4 md:w-1/2">
           <div class="rounded-md shadow-md overflow-hidden">
             <img src="dist/img/portfolio/1.jpeg" alt="Landing Page" width="w-full">
@@ -335,6 +353,10 @@
   <!-- Footer End -->
 
   <script src="dist/js/script.js"></script>
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
 </body>
 
 </html>
