--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
           <p class="font-medium text-base text-secondary">Berikut ini portfolio belajar saya yaitu membuat aplikasi
             Absensi Karyawan Sederhana menggunakan bahasa pemrograman Python</p>
         </div>
-      </div>>
+      </div>
     </div>
   </section>
   <!-- Portfolio Section End -->
