penambahan button dan link

--- a/index.html
+++ b/index.html
@@ -168,14 +168,20 @@
           <p class="font-medium text-base text-secondary">Berikut ini merupakan portfolio cloning form login Universitas
             Buana Perjuangan Karawang
             menggunakan HTML & Vanilla CSS.</p>
+          <button
+            class="font-semibold p-2 mt-8 rounded-lg bg-secondary text-white hover:opacity-80 transition duration-300 ease-in-out""><a href="
+            https://sipt2-ubpkarawang-ac-id-clone.vercel.app/" target="_blank">Lihat disini</a></button>
         </div>
-        <div class="mb-12 p-4 md:w-1/2">
+        <div class=" mb-12 p-4 md:w-1/2">
           <div class="rounded-md shadow-md overflow-hidden">
             <img src="dist/img/portfolio/4.jpeg" alt="Landing Page Food" width="w-full">
           </div>
           <h3 class="font-semibold text-xl text-dark mt-5 mb-3">Landing Page Food</h3>
           <p class="font-medium text-base text-secondary">Berikut ini merupakan website portfolio bertema food
             menggunakan TailwindCSS.</p>
+          <button
+            class="font-semibold p-2 mt-8 rounded-lg bg-secondary text-white hover:shadow-lg hover:opacity-80 transition duration-300 ease-in-out"><a
+              href="https://portfolio-web-food.vercel.app/" target="_blank">Lihat disini</a></button>
         </div>
         <div class="mb-12 p-4 md:w-1/2">
           <div class="rounded-md shadow-md overflow-hidden">
@@ -184,6 +190,9 @@
           <h3 class="font-semibold text-xl text-dark mt-5 mb-3">Landing Page Aldi Frasetiya</h3>
           <p class="font-medium text-base text-secondary">Berikut ini merupakan website portfolio pribadi saya
             menggunakan Boostrap.</p>
+          <button
+            class="font-semibold p-2 mt-8 rounded-lg bg-secondary text-white hover:shadow-lg hover:opacity-80 transition duration-300 ease-in-out"><a
+              href="https://portfolio-landing-page-aldifrasetiya.vercel.app/" target="_blank">Lihat disini</a></button>
         </div>
         <div class="mb-12 p-4 md:w-1/2">
           <div class="rounded-md shadow-md overflow-hidden">
@@ -192,6 +201,9 @@
           <h3 class="font-semibold text-xl text-dark mt-5 mb-3">Aplikasi Python | Cafe ABC</h3>
           <p class="font-medium text-base text-secondary">Berikut ini portfolio tugas UAS saya yaitu membuat aplikasi
             kasir Cafe menggunakan bahasa pemrograman Python.</p>
+          <button
+            class="font-semibold p-2 mt-8 rounded-lg bg-secondary text-white hover:shadow-lg hover:opacity-80 transition duration-300 ease-in-out"><a
+              href="https://github.com/Aldifrasetiya/aplikasi-cafe-abc" target="_blank">Lihat disini</a></button>
         </div>
         <div class="mb-12 p-4 md:w-1/2">
           <div class="rounded-md shadow-md overflow-hidden">
